--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ li a:hover:not(.active) {
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="#education">Education</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="Test/20170414_201856.jpg</a></li>
 </ul>
 
 <div class="slideshow-container">
@@ -205,6 +205,7 @@ function showSlides(n) {
 <p id="p1"><h2>This is Abhishek Yadav</h2></p>
 <p id="p2"><h3>I am from Noida , studying at GNIOT . I am in Btech Third Year .</h3></p>
 <h3></h3>
+<img src="Test/20170414_201856.jpg">
 <h4><marquee>THANKS FOR VISIT MY PAGE</marquee></h2>
 
 
